# rtap

./: CjvxAuNMyAlgorithm.cpp  Neu!.7z  README.md  databaseHRIR.m  exports_node.pcg
HRIR Köln/: HRIR_L2354.mat  KU100_CDFC.mat  how2use.m
HRIR Köln/miro_tutorials/: AKG-K601.mat  HRIR_CIRC360.mat  miro.m  miro_tutorial_1_introduction.m  miro_tutorial_2_advanced.m  miro_tutorial_3_SSRexport.m  miro_tutorial_4_SOFiAexport.m
RTAP/: startup.m
RTAP/01_dsp/V1/: 21369_IVT.asm  V1.asm  V1.dpj  V1.ldf  V1.mak  V1.pcf  V1.xml
RTAP/01_dsp/V2/: 21369_IVT.asm  (+4 more)
RTAP/02_matlabsimulink/: EXPDmodel.mdl  ExpA.m  ExpB.m  Termin2VE.mdl  ind_hilbert.m  loaddbl.m  makeEcho.m  savedbl.m  simulinkEXPC.slx
RTAP/03_dft/: ExpA.m  ExpAA.slx  Termin2VE_changed.slx  Termin2VE_changed_again.slx  expD.m  fCoeffs.dbl  library_praktikum.mdl  loaddbl.m  savedbl.m  signal2.dbl  signal4.dbl  signal5.dbl  signal6.dbl  signal7.dbl  signal8.dbl  termin2v4_vorgabe.mdl  termin2v6_vorgabe.mdl  termin2v6_vorgabe.mdl.r2007b
RTAP/04_filter/: FIRexpA.m  FIRexpB.m  FIRexpC.m  IIRexpA.m  IIRexpB.m  IIRexpC.m  TP.mat
RTAP/standalone/project/: CMakeLists.txt
RTAP/standalone/project/jvxAuNMyAlgorithm/: CMakeLists.txt
RTAP/standalone/project/jvxAuNMyAlgorithm/matlab-local/: jvxProcessOffline_local.m  jvxStartOffline_local.m
RTAP/standalone/project/jvxAuNMyAlgorithm/src/: CjvxAuNMyAlgorithm.h
RTAP/standalone/project/jvxMyHost/: CMakeLists.txt
RTAP/standalone/project/jvxMyHost/src/: jvxAudioHost_hooks.cpp  myCentralWidget.cpp  myCentralWidget.h
RTAP/standalone/project/jvxMyHost/uisrc/: myMainWidget.ui
(+955 files in other folders)
